[project]
name = "labledger"
version = "0.1.0"
description = "Lightweight research lab workflow, manager for tracking experiments, schedules and audit logs"
authors = [
    {name = "CS-Enthusiast",email = "EEkata43@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
