[project]
name = "labledger"
version = "0.1.0"
description = "Lightweight research lab workflow, manager for tracking experiments, schedules and audit logs"
authors = [
    {name = "CS-Enthusiast",email = "EEkata43@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
black = "^25.1.0"
mypy = "^1.17.1"
pytest = "^8.4.1"

